apps/litomi/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litomi-web
spec:
  selector:
    app: litomi-web
  ports:
    - name: http
      port: 3000
      targetPort: http
