apps/litomi/web/networkpolicy-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: litomi-web-ingress
spec:
  podSelector:
    matchLabels:
      app: litomi-web
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: 3000
